Add layout template and Twitter Bootstrap

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Serial renamer</title>
-</head>
-<body>
+{% extends "base.html.twig" %}
+{% block body %}
 	Hello {{name}}
-</body>
-</html>
+{% endblock %}
