Add Path navigation

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -4,6 +4,7 @@
 	<title>Serial renamer</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 	<div class="container">
