WIP series search

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -6,13 +6,19 @@
 			/ <a href="{{app.url_generator.generate("path", {"newpath": path})}}">{{name}}</a>
 		{% endfor %}
 	</nav>
-	<br>
+	<div>
+		{% if currentSeries is not defined %}
+			<form method="post" action="{{app.url_generator.generate("search")}}">
+				<label for="q">Search for: </label><input name="q" value="{{q|default('')}}" /><input type="submit" value="search" />
+			</form>
+		{% endif %}
+	</div>
 	<div class="dirlist">
 		{% for path, name in dirsInPath %}
 			
 			<a href="{{app.url_generator.generate("path", {"newpath": path}) }}">[{{name}}]</a><br />
 		{% endfor %}
-		
+
 		{% for f in filesInPath %}
 			{{f}}<br />
 		{% endfor %}
