--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -5,11 +5,12 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	
 </head>
 <body>
 	<div class="container">
 		{% block body "" %}
 	</div>
-	
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
