Add Flux and React.js
All libraries are installed and built with npm and browserify.

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<div class="container">
+	<div id="main" class="container">
 		{% block body "" %}
 	</div>
-	
+	<script src="/js/app.js" ></script>
 </body>
 </html>
