Rewrite PHP app as REST webservice
PHP app now returns JSON for all methods except index.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,4 +1,3 @@
 {% extends "base.html.twig" %}
-{% block body %}
-	
-{% endblock %}
+{% block data_files %}{{ data_files|json_encode() }}{% endblock %}
+
