--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<div id="main" class="container">
+	<div id="main" class="container" data-files="{% block data_files "" %}">
 		{% block body "" %}
 	</div>
 	<script src="/js/app.js" ></script>
