Show current path
Show current path and navigate up.
Fix handling of .. paths

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,11 @@
-.dirlist {
+.filelist {
 	font-family: monospace;
+}
+
+.current-path .folder-entry {
+	display: inline-block;
+}
+
+.current-path .folder-entry:after {
+	content:" / ";
 }
